Fix multi bars container margins to align with article body.

--- a/src/styles/multi-bars.scss
+++ b/src/styles/multi-bars.scss
@@ -1,10 +1,12 @@
 .multi-bars {
+
   &__legend {
     display: block;
     padding-bottom: 30px;
 
     @media (min-width: $screen-sm) {
-      padding-left: 25%;
+      margin-left: 25%;
+      padding-left: 15px;
     }
 
     .btn {
@@ -64,6 +66,7 @@
     @media (min-width: $screen-sm) {
       width: 75%;
       float: left;
+      padding-left: 15px;
     }
   }
 
